--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -77,7 +77,7 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            bhanudev/q4-default-backend:latest
+            # bhanudev/q4-default-backend:latest
             ghcr.io/quicq-dev/q4-default-backend:latest
           labels: ${{ steps.meta.outputs.labels }}
 
